--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name":"art.jeanfrancoisrobin.unitypackage",
   "version":"1.0.0",
-  "displayName":"VJ-Toolkit Core",
+  "displayName":"Jeanf-Toolkit Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "author":{
     "Jean-François Robin",
     "email":"robin.jeanfrancois@gmail.com",
     "url":"https://jeanafrancoisrobin.art",
     }
+  "depedencies":{
+    "com.unity.cinemachine": "2.8.9",
+    "com.unity.inputsystem": "1.3.0",
+  }
 }
