--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author":{
     "Jean-François Robin",
     "email":"robin.jeanfrancois@gmail.com",
-    "url":"https://jeanafrancoisrobin.art",
+    "url":"https://jeanafrancoisrobin.art"
     }
   "depedencies":{
     "com.unity.cinemachine": "2.8.9",
-    "com.unity.inputsystem": "1.3.0",
+    "com.unity.inputsystem": "1.3.0"
   }
 }
