--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName":"Jeanf-Toolkit Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "author":{
-    "Jean-François Robin",
+    "Jean-Francois Robin",
     "email":"robin.jeanfrancois@gmail.com",
     "url":"https://jeanafrancoisrobin.art"
     }
