--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version":"1.0.0",
   "displayName":"Jeanf-Toolkit Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
+  "unity": "2020.3",
+  "depedencies": {
+    "com.unity.cinemachine": "2.8.9",
+    "com.unity.inputsystem": "1.3.0"
+  },
+  "keywords": [
+    "core",
+    "jeanf",
+    "toolkit"
+  ],
   "author":{
     "name":"Jean-François Robin",
     "email":"robin.jeanfrancois@gmail.com",
     "url":"https://jeanfrancoisrobin.art"
-    }
-  "depedencies":{
-    "com.unity.cinemachine": "2.8.9",
-    "com.unity.inputsystem": "1.3.0"
   }
 }
