--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name":"art.jeanfrancoisrobin.unitypackage",
   "version":"1.0.0",
-  "displayName":"Jeanf-Toolkit Core",
+  "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
   "depedencies": {
