--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "depedencies": {
     "com.unity.cinemachine": "2.0.0",
     "com.unity.inputsystem": "1.0.0",
-    "com.unity.timeline": "1.0.0",
+    "com.unity.timeline": "1.0.0"
   },
   "keywords": [
     "core",
