--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "com.unity.cinemachine": "2.8.9",
     "com.unity.inputsystem": "1.3.0",
-    "com.unity.timeline": "1.6.4"
+    "com.unity.timeline": "1.6.4",
+    "com.unity.feature.vr": "1.0.0",
+    "com.unity.xr.oculus": "3.0.2",
+    "com.unity.xr.openxr": "1.4.2",
   }
 }
