--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.feature.vr": "1.0.0",
     "com.unity.xr.oculus": "3.0.2",
-    "com.unity.xr.openxr": "1.4.2",
+    "com.unity.xr.openxr": "1.4.2"
   }
 }
