--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,13 +11,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: 📚 checkout
-              uses: actions/checkout@v2.1.1
+              uses: actions/checkout@v3
             - name: 🟢 node
-              uses: actions/setup-node@v1.4.2
+              uses: actions/setup-node@v3
               with:
                   node-version: 16
                   registry-url: https://registry.npmjs.org
             - name: 🚀 publish
-              run: npm publish --access public
+              run:
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
