--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name":"art.jeanfrancoisrobin.unitypackage",
-  "version":"1.0.0",
+  "name":"core.jeanfrancoisrobin.unitypackage",
+  "version":"0.0.1",
   "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
