--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "com.unity.feature.vr": "1.0.0",
     "com.unity.xr.oculus": "3.0.2",
     "com.unity.xr.openxr": "1.4.2"
+  },
+  "publishConfig": {
+    "registry": "jeanfrancoisrobin.art"
   }
 }
