--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name":"core2.jeanfrancoisrobin.unitypackage",
-  "version":"0.0.3",
-  "displayName":"Core",
+  "version":"0.0.1",
+  "displayName":"Core2",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
   "keywords": [
