--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":"core.jeanfrancoisrobin.unitypackage",
-  "version":"0.0.4",
+  "version":"0.0.5",
   "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
@@ -26,7 +26,7 @@
         {
             "displayName": "Basic setup",
             "description": "Contains example scenes, prefabs and setting files",
-            "path": "Samples~/"
+            "path": "Samples/"
         }
     ]
 }
