--- a/Runtime/jeanf.core.asmdef
+++ b/Runtime/jeanf.core.asmdef
@@ -11,7 +11,9 @@
         "GUID:4847341ff46394e83bb78fbd0652937e",
         "GUID:a9582160ded7e3c46829c5005bf42835",
         "GUID:96aa6ba065960476598f8f643e7252b6",
-        "GUID:c66676bdb1cd68648a487fd6c7ea0937"
+        "GUID:c66676bdb1cd68648a487fd6c7ea0937",
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
+        "GUID:190979c3ed6e41c448f5e9925429edf9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
