--- a/Runtime/jeanf.core.asmdef
+++ b/Runtime/jeanf.core.asmdef
@@ -13,7 +13,8 @@
         "GUID:96aa6ba065960476598f8f643e7252b6",
         "GUID:c66676bdb1cd68648a487fd6c7ea0937",
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
-        "GUID:190979c3ed6e41c448f5e9925429edf9"
+        "GUID:190979c3ed6e41c448f5e9925429edf9",
+        "GUID:dc960734dc080426fa6612f1c5fe95f3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
