--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name":"core.jeanfrancoisrobin.unitypackage",
-  "version":"0.0.9",
+  "version":"0.1.0",
   "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
@@ -20,7 +20,8 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.feature.vr": "1.0.0",
     "com.unity.xr.oculus": "3.0.2",
-    "com.unity.xr.openxr": "1.4.2"
+    "com.unity.xr.openxr": "1.4.2",
+    "com.unity.xr.interaction.toolkit": "2.2.0"
   },
   "samples": [
         {
