--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name":"jeanfrancoisrobin.core",
-  "version":"0.2.6",
+  "name":"jeanfrancoisrobin.art.core",
+  "version":"0.0.1",
   "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
