--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name":"fr.jeanf.test",
+  "name":"fr.jeanf.core",
   "version":"0.0.1",
-  "displayName":"Test",
+  "displayName":"Core",
   "description":"This package contains a basic scene loader as well as some basic scripts to trigger events as to make a project more interactive",
   "unity": "2020.3",
   "keywords": [
